apply plugin: 'com.android.application'

buildscript {
    repositories {
        mavenCentral()
        jcenter()
    }

    dependencies {
    }
}

android {
    compileSdkVersion 28
    defaultConfig {
        applicationId "kr.ac.jejunu.jnu_tong"
        minSdkVersion 21
        targetSdkVersion 28
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        targetCompatibility 1.8
        sourceCompatibility 1.8
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha4'
    implementation "androidx.recyclerview:recyclerview:1.1.0-alpha04"
    implementation "androidx.appcompat:appcompat:1.1.0-alpha04"
    implementation "androidx.legacy:legacy-support-v4:1.0.0"

    //Apache -----
    implementation 'com.brandongogetap:stickyheaders:0.5.1'

    //lifecycle
    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0-alpha04"
    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.1.0-alpha04"

    //rx2
    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'

    //dagger2
    implementation "com.google.dagger:dagger:$rootProject.daggerVersion"
    implementation "com.google.dagger:dagger-android:$rootProject.daggerVersion"
    implementation "com.google.dagger:dagger-android-support:$rootProject.daggerVersion"
    annotationProcessor "com.google.dagger:dagger-android-processor:$rootProject.daggerVersion"
    annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.daggerVersion"

    //retrofit2, gson
    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
    implementation 'com.google.code.gson:gson:2.8.2'
    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'

    //lombok
    compileOnly "org.projectlombok:lombok:1.16.18"
    compileOnly 'org.glassfish:javax.annotation:10.0-b28'
    annotationProcessor "org.projectlombok:lombok:1.16.18"

    //MIT --------
    implementation ('com.alibaba.android:ultraviewpager:1.0.7.6@aar') {
        transitive = true
    }

    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'com.android.support.test:runner:1.0.2'
    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
}